cmake_minimum_required(VERSION 4.1.2)
project(ring_ping C)
set(CMAKE_GENERATOR Ninja)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g3 -O3")
include_directories(include/)
add_subdirectory(json_helper)
add_subdirectory(influx)
add_subdirectory(ring_stats)
add_subdirectory(generic)

add_executable(ring_ping ring.c)
target_link_libraries(ring_ping PRIVATE nlring_lib json_helper_lib influx_lib generic_lib)